# modelo_manos

./: .gitignore  README.md  main.py  pyproject.toml  train.py
.github/agents/: st-gcn-specialist.agent.md
models/: staegcn.py
src/: draw_skeleton_mediapipe.py  generate.py  prepare_custom_stgcn_data.py  render_stgcn_attention.py
st-gcn/config/st_gcn/custom-hand-21/: train.yaml
st-gcn/net/utils/: graph.py
